AC_INIT(PFShell,alpha 0.19,loic.blot@frostsapphirestudios.com)
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_YACC

AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h])
AC_CHECK_HEADERS([stdio.h])

AC_CONFIG_FILES([
	Makefile
	daemon_src/Makefile
	shell_src/Makefile
	OpenBSD50-mods/Makefile
	OpenBSD50-mods/ripd/Makefile
	])
AC_OUTPUT
