bin_PROGRAMS = BSDRouterd

AM_CPPFLAGS = -lncurses -lm -std=gnu99

BSDRouterd_SOURCES = \
	configuration.c \
	configuration.h \
	daemon_socket.c \
	daemon_socket.h \
	firewall.c \
	firewall.h \
	interface.c \
	interface.h \
	iputils.c \
	iputils.h \
	main.c \
	route.c \
	route.h

BSDRouterd_LDADD = -lm

BSDRouterd_LDFLAGS =
