bin_PROGRAMS = PFShell

AM_CPPFLAGS = -lncurses

PFShell_SOURCES = \
	command.c \
	command.h \
	command_user.c \
	command_user.h \
	command_enable.c \
	command_enable.h \
	command_conf.c \
	command_conf.h \
	command_conf_fw.c \
	command_conf_fw.h \
	command_conf_if.c \
	command_conf_if.h \
	command_conf_rd.c \
	command_conf_rd.h \
	configuration.c \
	configuration.h \
	firewall.c \
	firewall.h \
	iputils.c \
	iputils.h \
	main.c \
	prompt.c \
	prompt.h

PFShell_LDADD =

PFShell_LDFLAGS =
